# languages

bash/: StatUnix.sh  configure_otl_postgresql.sh  exportOracleScheme.sh  f5.sh
c/client-server/: Makefile  cli.c  createpid.c  createpid2.c  errores.c  errores.h  ourhdr.h  p.c  srv.c
coffee/: first.coffee  palindrome.coffee
cpp/: Common.cpp  Utils.cpp
cpp/GetDir/: AUTHORS  GetDir.dsw  Makefile.am  README  buildBooks.cpp  buildBooks.h  buildBooksNovels.cpp  buildBooksNovels.dsp  buildBooksTechnical.cpp  buildBooksTechnical.dsp  configure.in  run.sh  run_bat
cpp/libUtil/: README  bbbutil.mak  bbbutil.vpj  change.py
cpp/libUtil/src/: BbbDate.cpp  BbbDate.h  BbbErrno.cpp  BbbErrno.h  BbbFile.cpp  BbbFile.h  BbbLog.cpp  BbbLog.h  BbbQueue.cpp  BbbQueue.h  BbbString.h
cpp/otl/: XXDbConnect.cpp  XXDbConnect.h  XXDbStatus.cpp  XXDbStatus.h
cpp/subset/: INSTALL  Makefile  README  queue.cpp  queue.h  stack.cpp  stack.h  subset.cpp  subset.h  test.cpp  test.dsp  util.cpp  util.h
cpp/tuples/: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  README  Set.cpp  Set.h  SetTestDriver.cpp  Size.h  Tuple.cpp  Tuple.h  Tuple.mk  TupleTestDriver.cpp  Utils.cpp  configure.in  runme.sh
js/: SomeModelClass.js  SomeViewClass.js  formUtils.js  functions.js  gene-css.js  inventory.js  module.js  palindrome.js  userAgent.js  windowUtils.js
perl/: buildMMD.pl  createWfAgentScript.pl  mkorder.pl
perl/MyCheckout/: Changes  MANIFEST  Makefile.PL  README
perl/MyCheckout/lib/: MyCheckout.pm
perl/MyCheckout/t/: MyCheckout.t
python/: createmenufromgnometofluxbox.py  phonecode.py
python/cgipy/: bio.py  books.py  c.py  cpp.py  home.py  index.py  libconfig.py  menu.py  myown.py  oracle.py  unix.py
python/pylons/: pylons_adm.py  pylons_admingroup.py  pylons_breadparser.py  pylons_diskhandler.py  pylons_signup.py
python/somepythonexamples/: change.py  rename.py  utilfunctions.py
rails/r1/: README.rdoc
rails/r1/app/controllers/: articler_controller.rb  articles_controller.rb  comments_controller.rb
rails/r1/app/views/articles/: _form.html.erb  _toolbar.html.erb  edit.html.erb  index.html.erb  show.html.erb
rails/r1/app/views/comments/: _form.html.erb
rails/r1/config/: application.rb  secrets.yml
rails/r1/db/: schema.rb
rails/r1/test/helpers/: articler_helper_test.rb
